--- a/.psqlrc
+++ b/.psqlrc
@@ -16,3 +16,7 @@
 
 /* Apply all extentions in DB to shell */
 \set extensions 'select * from pg_available_extensions;'
+
+\setenv PAGER pspg
+\pset border 2
+\pset linestyle unicode
